# DuckX

./: CMakeLists.txt  README.md  duckx_amalg.hpp  runner.sh
src/: constants.hpp  duckx.cpp  duckx.hpp
test/: CMakeLists.txt  doctest.h  iterator_tests.cpp
